--- a/src/layouts/LayoutDefault/index.scss
+++ b/src/layouts/LayoutDefault/index.scss
@@ -1,3 +1,10 @@
-.test {
-  border: 2px solid pink;
+.l-layout-default {
+  height: 100%;
+  overflow: hidden;
+  background: url("~@/assets/images/background.png") no-repeat center center
+    fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
