add font and no-highlight mixin

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,3 @@
-@import "setup/mixins/_breakpoint.scss";
-
+@import 'setup/mixins/_breakpoint.scss';
+@import 'setup/mixins/_nohighlight.scss';
 // variables
