--- a/src/components/atoms/window/index.scss
+++ b/src/components/atoms/window/index.scss
@@ -1,3 +1,5 @@
+@import '~styles/base';
+
 .a-window {
   touch-action: none;
   position: absolute;
@@ -37,6 +39,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 10px;
+  font-weight: 700;
+  font-size: 17px;
+  color: white;
+  @include no-highlight;
 }
 
 .a-window__menu-bar {
@@ -47,5 +53,8 @@
   background-color: rgb(207, 207, 207);
   span {
     margin-right: 10px;
+    font-weight: 500;
+    font-size: 15px;
+    @include no-highlight;
   }
 }
