--- a/src/components/atoms/window/index.scss
+++ b/src/components/atoms/window/index.scss
@@ -25,7 +25,7 @@
   height: 27px;
   border-radius: 7px;
   border: 1px solid rgb(255, 255, 255);
-  background-color: rgb(235, 195, 235);
+  background-color: $pink;
   cursor: default;
 }
 
@@ -39,6 +39,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 10px;
+  //   padding-bottom: 3px;
   font-weight: 700;
   font-size: 17px;
   color: white;
@@ -57,4 +58,10 @@
     font-size: 15px;
     @include no-highlight;
   }
+}
+
+.a-window__content {
+  display: flex;
+  justify-content: flex-start;
+  padding: 10px;
 }
