--- a/src/components/atoms/window/index.scss
+++ b/src/components/atoms/window/index.scss
@@ -5,8 +5,8 @@
   position: absolute;
   width: 500px;
   height: 400px;
-  left: 400px;
-  top: 50px;
+  //   left: 400px;
+  //   top: 50px;
   border-radius: 15px 15px 5px 5px;
   border: 4px solid rgb(124, 190, 235);
   background-color: rgb(248, 248, 248);
