create prop for window and icon

--- a/src/components/atoms/icon/index.scss
+++ b/src/components/atoms/icon/index.scss
@@ -1,3 +1,5 @@
+@import '~styles/base';
+
 .a-icon {
   margin: 15px;
   width: 80px;
@@ -13,4 +15,5 @@
   color: #ffffff;
   font-size: 16px;
   text-shadow: 1px 1px 5px rgb(78, 78, 78);
+  @include no-highlight;
 }
