--- a/src/components/atoms/window/index.scss
+++ b/src/components/atoms/window/index.scss
@@ -14,7 +14,7 @@
   display: flex;
   flex-flow: column nowrap;
   z-index: 4;
-  transform: translate(-251px, 4px);
+  //   transform: translate(-251px, 4px);
 }
 
 .a-window__close-button {
