--- a/src/components/atoms/icon/index.scss
+++ b/src/components/atoms/icon/index.scss
@@ -8,12 +8,25 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  img {
-    width: 60px;
-  }
   font-weight: bold;
   color: #ffffff;
   font-size: 16px;
   text-shadow: 1px 1px 5px rgb(78, 78, 78);
   @include no-highlight;
+}
+
+.a-icon__icon-container {
+  width: 60px;
+}
+
+.a-icon__image-container {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgb(218, 218, 218);
+  img {
+    width: 60px;
+  }
 }
