--- a/src/layouts/LayoutDefault/index.scss
+++ b/src/layouts/LayoutDefault/index.scss
@@ -1,7 +1,7 @@
 .l-layout-default {
   height: 100%;
   overflow: hidden;
-  background: url("~@/assets/images/background.png") no-repeat center center
+  background: url('~@/assets/images/background.png') no-repeat center center
     fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -14,4 +14,5 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: flex-start;
 }
