--- a/src/components/atoms/window/index.scss
+++ b/src/components/atoms/window/index.scss
@@ -2,7 +2,7 @@
 
 .a-window {
   touch-action: none;
-  position: absolute;
+  position: fixed;
   width: 500px;
   height: 400px;
   //   left: 400px;
