--- a/src/components/atoms/window/index.scss
+++ b/src/components/atoms/window/index.scss
@@ -3,10 +3,6 @@
 .a-window {
   touch-action: none;
   position: fixed;
-  width: 500px;
-  height: 400px;
-  //   left: 400px;
-  //   top: 50px;
   border-radius: 15px 15px 5px 5px;
   border: 4px solid rgb(124, 190, 235);
   background-color: rgb(248, 248, 248);
@@ -14,7 +10,6 @@
   display: flex;
   flex-flow: column nowrap;
   z-index: 4;
-  //   transform: translate(-251px, 4px);
 }
 
 .a-window__close-button {
@@ -39,7 +34,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 10px;
-  //   padding-bottom: 3px;
+  padding-bottom: 3px;
   font-weight: 700;
   font-size: 17px;
   color: white;
@@ -61,8 +56,18 @@
 }
 
 .a-window__content {
-  height: 100%;
+  //   height: 100%;
   display: flex;
-  justify-content: flex-start;
+}
+
+.a-window__content--icons {
+  padding: 10px;
+}
+
+.a-window__content--image {
+  border: 2px solid rgb(128, 160, 193);
+}
+
+.a-window__content--text {
   padding: 10px;
 }
