--- a/src/components/globals/taskbar/index.scss
+++ b/src/components/globals/taskbar/index.scss
@@ -1,3 +1,5 @@
+@import '~styles/base';
+
 .g-taskbar {
   position: fixed;
   z-index: 500;
@@ -6,4 +8,7 @@
   height: 45px;
   background-color: #6cb2e0;
   box-shadow: 0px 0px 15px #888888;
+  @include breakpoint('xsmall') {
+    height: 35px;
+  }
 }
