--- a/src/components/globals/taskbar/startButton/index.scss
+++ b/src/components/globals/taskbar/startButton/index.scss
@@ -1,3 +1,5 @@
+@import '~styles/base';
+
 .g-taskbar__start-button {
   float: left;
   display: flex;
@@ -12,4 +14,7 @@
   font-size: 28px;
   font-weight: bold;
   color: #ebebeb;
+  @include breakpoint('xsmall') {
+    width: 120px;
+  }
 }
