--- a/src/styles/setup/mixins/_breakpoint.scss
+++ b/src/styles/setup/mixins/_breakpoint.scss
@@ -13,10 +13,13 @@ $breakpoints: (
   )
 ) !default;
 
-/// Mixin to manage responsive breakpoints
-/// @author Hugo Giraudel
-/// @param {String} $breakpoint - Breakpoint name
-/// @require $breakpoints
+// $breakpoints: (
+//   'xsmall': 543px,
+//   'small': 767px,
+//   'medium': 1023px,
+//   'large': 1439px
+// ) !default;
+
 @mixin breakpoint($breakpoint) {
   // If the key exists in the map
   @if map-has-key($breakpoints, $breakpoint) {
