--- a/src/components/atoms/icon/index.scss
+++ b/src/components/atoms/icon/index.scss
@@ -19,6 +19,7 @@
   }
   @include breakpoint('xsmall') {
     width: 60px;
+    margin: 10px;
     font-size: 12px;
   }
 }
@@ -39,5 +40,12 @@
   border: 1px solid rgb(218, 218, 218);
   img {
     width: 60px;
+  }
+  @include breakpoint('xsmall') {
+    width: 40px;
+    height: 40px;
+    img {
+      width: 40px;
+    }
   }
 }
