--- a/src/components/atoms/window/index.scss
+++ b/src/components/atoms/window/index.scss
@@ -22,12 +22,15 @@
   border: 1px solid rgb(255, 255, 255);
   background-color: $pink;
   cursor: default;
+  @include breakpoint('xsmall') {
+    width: 23px;
+    height: 23px;
+  }
 }
 
 .a-window__top-bar {
   position: relative;
   top: 0px;
-  //   width: 100%;
   height: 35px;
   background-color: rgb(124, 190, 235);
   display: flex;
@@ -39,6 +42,11 @@
   font-size: 17px;
   color: white;
   @include no-highlight;
+
+  @include breakpoint('xsmall') {
+    height: 30px;
+    font-size: 15px;
+  }
 }
 
 .a-window__menu-bar {
@@ -53,6 +61,13 @@
     font-size: 15px;
     @include no-highlight;
   }
+
+  @include breakpoint('xsmall') {
+    height: 25px;
+    span {
+      font-size: 12px;
+    }
+  }
 }
 
 .a-window__content {
@@ -62,6 +77,9 @@
 
 .a-window__content--icons {
   padding: 10px;
+  @include breakpoint('xsmall') {
+    padding: 5px;
+  }
 }
 
 .a-window__content--image {
