--- a/src/components/atoms/window/index.scss
+++ b/src/components/atoms/window/index.scss
@@ -23,8 +23,8 @@
   background-color: $pink;
   cursor: default;
   @include breakpoint('xsmall') {
-    width: 23px;
-    height: 23px;
+    width: 21px;
+    height: 21px;
   }
 }
 
@@ -44,35 +44,14 @@
   @include no-highlight;
 
   @include breakpoint('xsmall') {
-    height: 30px;
+    height: 28px;
+    padding: 0 8px 3px 8px;
     font-size: 15px;
-  }
-}
-
-.a-window__menu-bar {
-  display: flex;
-  align-items: center;
-  padding-left: 10px;
-  height: 30px;
-  background-color: rgb(207, 207, 207);
-  span {
-    margin-right: 10px;
-    font-weight: 500;
-    font-size: 15px;
-    @include no-highlight;
-  }
-
-  @include breakpoint('xsmall') {
-    height: 25px;
-    span {
-      font-size: 12px;
-    }
   }
 }
 
 .a-window__content {
   //   height: 100%;
-  display: flex;
 }
 
 .a-window__content--icons {
@@ -80,12 +59,17 @@
   @include breakpoint('xsmall') {
     padding: 5px;
   }
+  display: flex;
 }
 
 .a-window__content--image {
   border: 2px solid rgb(128, 160, 193);
+  display: flex;
 }
 
 .a-window__content--text {
+  text-align: left;
+  font-family: 'Lucida Console', 'Courier New', monospace;
+  line-height: 20px;
   padding: 10px;
 }
