--- a/src/components/atoms/window/index.scss
+++ b/src/components/atoms/window/index.scss
@@ -72,4 +72,8 @@
   font-family: 'Lucida Console', 'Courier New', monospace;
   line-height: 20px;
   padding: 10px;
+
+  .p {
+    // margin-top: 10px;
+  }
 }
