--- a/src/components/atoms/window/menuBar/index.scss
+++ b/src/components/atoms/window/menuBar/index.scss
@@ -5,7 +5,7 @@
   align-items: center;
   padding-left: 10px;
   height: 30px;
-  background-color: rgb(207, 207, 207);
+  background-color: $grey--40;
   span {
     margin-right: 10px;
     font-weight: 500;
@@ -19,4 +19,6 @@
       font-size: 11px;
     }
   }
+  -webkit-box-shadow: inset 0px -12px 10px -11px $grey--50;
+  box-shadow: inset 0px -12px 10px -11px $grey--50;
 }
