--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -2,4 +2,22 @@
 @import 'setup/mixins/_breakpoint.scss';
 @import 'setup/mixins/_nohighlight.scss';
 // variables
-$pink: rgb(235, 195, 235);
+// $pink: rgb(235, 195, 235);
+// $blue--50: #7cbeeb;
+// $blue--60: #79bce9
+// $blue--70: #6cb2e0;
+$pink--50: #ebb7c4;
+
+$blue--50: #74c9eb;
+$blue--60: #70c1e1;
+$blue--70: #5fadc7;
+
+$green--50: #56d164;
+
+$yellow--50: #ebcf4d;
+
+$grey--30: #dadada;
+$grey--40: #cfcfcf;
+$grey--50: #b3b3b3;
+
+$black: #000000;
