--- a/src/components/atoms/icon/index.scss
+++ b/src/components/atoms/icon/index.scss
@@ -37,7 +37,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid rgb(218, 218, 218);
+  border: 1px solid $grey--30;
   img {
     width: 60px;
   }
