--- a/src/components/globals/taskbar/clockBox/index.scss
+++ b/src/components/globals/taskbar/clockBox/index.scss
@@ -8,7 +8,7 @@
   align-items: center;
   width: 170px;
   height: 100%;
-  background-color: #79bce9;
+  background-color: $blue--50;
   box-shadow: 0px 0px 15px #888888;
   font-size: 15px;
   font-weight: bold;
