--- a/src/components/globals/taskbar/index.scss
+++ b/src/components/globals/taskbar/index.scss
@@ -6,7 +6,7 @@
   bottom: 0;
   width: 100%;
   height: 45px;
-  background-color: #6cb2e0;
+  background-color: $blue--60;
   box-shadow: 0px 0px 15px #888888;
   @include breakpoint('xsmall') {
     height: 35px;
