--- a/src/components/globals/taskbar/startButton/index.scss
+++ b/src/components/globals/taskbar/startButton/index.scss
@@ -9,7 +9,7 @@
   height: 100%;
   border-top-right-radius: 13px;
   border-bottom-right-radius: 13px;
-  background-color: #56d164;
+  background-color: $green--50;
   box-shadow: 0px 0px 15px #888888;
   font-size: 28px;
   font-weight: bold;
