--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -8,16 +8,20 @@
 // $blue--70: #6cb2e0;
 $pink--50: #ebb7c4;
 
+$blue--40: #7ad2f5;
 $blue--50: #74c9eb;
 $blue--60: #70c1e1;
 $blue--70: #5fadc7;
 
+$green--30: #5ee66e;
 $green--50: #56d164;
 
 $yellow--50: #ebcf4d;
 
 $grey--30: #dadada;
 $grey--40: #cfcfcf;
+$grey--45: #c1c1c1;
 $grey--50: #b3b3b3;
+$grey--60: #888888;
 
 $black: #000000;
